--- a/css/main.css
+++ b/css/main.css
@@ -40,20 +40,23 @@ h2 {
 }
 
 p {
-    margin: 0;
+    margin: 0 0 1em;
 }
 
 
 /* main-header */
 
-.main-header {
-    height: 131px;
-    background-color: #292929;
-    border-bottom: #1E1E1E 6px solid;
+.main-screen.on {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    opacity: 0.4;
 }
 
-.header-container {
-    height: 131px;
+.main-header {
+    background-color: #292929;
+    box-shadow: inset 0 -6px #1E1E1E;
 }
 
 header .logo {
@@ -67,8 +70,10 @@ header .logo {
 
 .main-nav li {
     border-left: 1px solid #1D1D1D;
-    min-width: 133px;
-    height: 131px;
+}
+
+.main-nav li:hover {
+    cursor: pointer;
 }
 
 .main-nav li:last-child {
@@ -78,12 +83,11 @@ header .logo {
 .main-nav a {
     font-family: lato-bold, serif;
     color: #FFFFFF;
-    display: block;
-    min-width: 62px;
-    text-align: center;
-    margin-top: 3.546rem;
-    padding-inline-start: 2.187rem;
-    padding-inline-end: 2.187rem;
+    width: 133px;
+    height: 131px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-nav a:hover {
@@ -91,7 +95,16 @@ header .logo {
 }
 
 .main-nav li:active {
-    border-bottom: solid 6px #54BE38;
+    box-shadow: inset 0 -6px #54BE38;
+}
+
+.menu-btn {
+    color: white;
+    position: absolute;
+    right: 1em;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
 }
 
 
@@ -108,6 +121,7 @@ header .logo {
 
 .card {
     margin-top: 77px;
+    gap: 2.5em;
 }
 
 .card:last-child {
@@ -115,50 +129,112 @@ header .logo {
 }
 
 .card-img {
-    max-width: 469px;
-    margin-right: 42px;
+    max-width: 50%;
+    /* display: flex; */
+    object-fit: cover;
 }
 
 .card-title {
     font-family: lato-bold;
-    font-size: 28px;
+    font-size: 1.75rem;
     color: #4F4E4E;
     letter-spacing: 0.062rem;
     text-transform: uppercase;
-    margin-bottom: 3.625rem;
+    margin-bottom: 2.071em;
+    /* padding-right: 82px; */
 }
 
 .card-text {
-    font-weight: bold;
+    font-size: 1em;
     letter-spacing: 0.062rem;
-    padding-inline-end: 25px;
+    /* padding-inline-end: 25px; */
     color: #6B6B6B;
-    /* max-height: 114px; */
 }
 
 .card-text span {
-    display: block;
-    padding-top: 19px;
-    padding-bottom: 43px;
+    display: flex;
+    padding-top: 1.187em;
+    padding-bottom: 2.687em;
 }
 
 .btn-card button {
-    width: 187px;
-    height: 41px;
+    font-family: lato-bold, serif;
+    font-size: 1em;
+    padding: 0 1em;
+    line-height: 2.5em;
     color: #D2D2D2;
     border: solid 1px #D2D2D2;
-    border-radius: 80px;
+    border-radius: 1.31em;
     background-color: #FFFFFF;
     cursor: pointer;
+    position: relative;
+    transition: .3s;
 }
 
 .btn-card button span {
-    padding-left: 10px;
+    padding-left: .625em;
+    opacity: 0;
+    position: absolute;
+    transition: .4s;
+    right: .625em;
 }
 
 .btn-card button:hover {
     border-color: #58C93A;
     color: #58C93A;
+    padding-right: 1.875em;
+}
+
+.btn-card button:hover span {
+    opacity: 1;
+}
+
+.modal {
+    position: fixed;
+    background-color: white;
+    top: 25%;
+    left: 10%;
+    height: 300px;
+    z-index: 3;
+    text-align: center;
+    padding: 60px;
+    display: none;
+    border: 4px solid #4F4E4E;
+}
+
+.modal h2 {
+    padding-bottom: 50px;
+}
+
+.modal form {
+    padding-bottom: 20px;
+}
+
+.close-modal {
+    background-color: #4F4E4E;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: lightgray;
+}
+
+.close-modal:hover {
+    background-color: lightgray;
+    color: #4F4E4E;
+}
+
+.submit {
+    background-color: #4F4E4E;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 1rem;
+    color: lightgray;
+}
+
+.submit:hover {
+    color: #54BE38;
 }
 
 
@@ -173,6 +249,12 @@ header .logo {
     font-family: lato-bold, serif;
     font-size: 18px;
     letter-spacing: 1px;
+    margin: 0 20px;
+}
+
+.pagind div:hover {
+    color: #3a3838;
+    cursor: pointer;
 }
 
 .pagind div:last-child {
@@ -205,6 +287,7 @@ header .logo {
 .social-nav {
     margin-top: 37px;
     justify-content: center;
+    gap: 1.812rem;
 }
 
 .icon {
@@ -212,7 +295,6 @@ header .logo {
     width: 41px;
     filter: grayscale(100%);
     opacity: 0.3;
-    margin-inline-end: 29px;
     margin-bottom: 80px;
 }
 
@@ -256,4 +338,80 @@ header .logo {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+@media (max-width: 1020px) {
+    .main-layout {
+        max-width: 820px;
+    }
+    .card-title {
+        font-size: 1.35rem;
+    }
+    .card-title {
+        margin-bottom: 1.071em;
+    }
+    .card-text span {
+        font-size: 1em;
+        padding-top: 1em;
+        padding-bottom: 0.5em;
+    }
+}
+
+@media (max-width: 720px) {
+    .main-layout {
+        max-width: 720px;
+    }
+    .card {
+        flex-direction: column;
+    }
+    .card-img {
+        max-width: unset;
+    }
+    .main-content {
+        border: unset;
+        margin: 0 30px;
+    }
+    header .logo {
+        padding: .7em;
+        font-size: 2rem;
+    }
+    .nav-list {
+        position: fixed;
+        top: 0;
+        right: 0;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        transform: translatey(-100%);
+        z-index: 2;
+    }
+    .open-list {
+        transition: .4s;
+        transform: translatey(10%);
+    }
+    .main-nav a {
+        background-color: gray;
+        width: 80%;
+        margin: 10px auto;
+        font-size: 2rem;
+        border: 1px solid rgb(68, 66, 66);
+        opacity: 0.9;
+    }
+    .main-nav li:active {
+        box-shadow: unset;
+    }
+    .main-nav li {
+        border-left: unset;
+    }
+    .main-nav li:last-child {
+        border-right: unset;
+    }
+    .menu-btn {
+        display: block;
+    }
+    .main-header.on {
+        position: fixed;
+        width: 100%;
+        z-index: 3;
+    }
 }
